<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginTop="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:background="@drawable/bg_circle_intro">

            <ImageView
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/field"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/app_name"
                tools:ignore="UnusedAttribute" />


        </RelativeLayout>


        <TextView
            android:id="@+id/mainTVID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/slide_3_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main1TVID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="@string/slide_3_desc"
            android:textAlignment="center"
            android:textColor="@color/edit_7"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</RelativeLayout>