<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pic_alert"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansation_bold"
                android:padding="@dimen/_5sdp"
                android:text="Alert....!"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tittleTVID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/camera"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/edit_4"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/messageTVID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_8sdp"
                android:text="@string/gallery"
                android:textColor="@color/edit_4"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/sansation_bold"
                android:gravity="end"
                android:padding="@dimen/_5sdp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>