<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/striplogo"
            android:contentDescription="@string/app_name" />


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_290sdp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_below="@+id/card"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDots"
        android:layout_marginTop="@dimen/_18ssp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_intro"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/next"
                    android:textColor="@color/edit_4"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,RelativeOverlap,RtlHardcoded" />

                <Button
                    android:id="@+id/btn_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/skip"
                    android:visibility="gone"
                    android:textColor="@color/black_n"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,RtlHardcoded" />

            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_all_btn"
                android:text="Continue"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="@dimen/_1sdp"
                android:elevation="@dimen/_3sdp"
                tools:ignore="HardcodedText,UnusedAttribute" />

        </RelativeLayout>

        <TextView
            android:id="@+id/aboutTVID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="About Tranquil Crm"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/_5sdp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</RelativeLayout>