<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.tags.TagDetailsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/header_attendance" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagsRVID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:smoothScrollbar="true" />

            <LinearLayout
                android:id="@+id/newTagLLID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tagsRVID"
                android:background="@color/white"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:orientation="vertical"
                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">

                <LinearLayout
                    android:id="@+id/addNewTagsLLID"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:ignore="DisableBaselineAlignment">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/fab_add"
                            android:backgroundTint="@color/black_n"
                            android:contentDescription="@string/app_name" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.85"
                        tools:ignore="UselessLeaf">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="0dp"
                            android:fontFamily="@font/roboto_regular"
                            android:text="New Tags"
                            android:textAllCaps="false"
                            android:textColor="@color/edit_4"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/edit_7" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/edit_f"
                android:clickable="true"
                android:orientation="vertical"
                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/edit_b" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2"
                    tools:ignore="DisableBaselineAlignment">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/cancelTVIDBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/_10sdp"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingEnd="@dimen/_20sdp"
                            android:text="@string/Cancel"
                            android:textAllCaps="true"
                            android:textColor="@color/green"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf">

                        <TextView
                            android:id="@+id/okTVIDBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/roboto_regular"
                            android:padding="@dimen/_10sdp"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingEnd="@dimen/_20sdp"
                            android:text="OK"
                            android:textAllCaps="true"
                            android:textColor="@color/green"
                            android:textSize="@dimen/_11ssp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/no_data_available"
                android:textColor="@color/edit_7"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>